Updated pin definitions for various boards, including changes to I2C, SPI and other hardware interface configurations.

--- a/lib/obp60task/platformio.ini
+++ b/lib/obp60task/platformio.ini
@@ -56,7 +56,7 @@ build_flags=
 #    -D DISPLAY_ZJY400300-042CAAMFGN #alternativ E-Ink display from ZZE Technology, R10 2.2 ohm - very good
     ${env.build_flags}
 #CONFIG_ESP_TASK_WDT_TIMEOUT_S = 10 #Task Watchdog timeout period (seconds) [1...60] 5 default
-upload_port = /dev/ttyACM0          #OBP60 download via USB-C direct
+//upload_port = /dev/ttyACM0          #OBP60 download via USB-C direct
 upload_protocol = esptool           #firmware upload via USB OTG seriell, by first upload need to set the ESP32-S3 in the upload mode with shortcut GND to Pin27 
 upload_speed = 230400
 monitor_speed = 115200
@@ -64,8 +64,11 @@ monitor_speed = 115200
 [env:obp40_s3]
 platform = espressif32@6.8.1
 board_build.variants_dir = variants
-board = obp40_s3_n8r8   #ESP32-S3 N8R8, 8MB flash, 8MB PSRAM, OBP60 clone (CrowPanel 4.2)
-board_build.partitions = default_8MB.csv #ESP32-S3 N8, 8MB flash
+#board = obp40_s3_n8r8   #ESP32-S3 N8R8, 8MB flash, 8MB PSRAM, OBP60 clone (CrowPanel 4.2)
+board = obp60_s3_n16r8  #ESP32-S3 N16R8, 16MB flash, 8MB PSRAM, production series
+#board = esp32-s3-devkitc-1-n16r8v
+#board_build.partitions = default_8MB.csv #ESP32-S3 N8, 8MB flash
+board_build.partitions = default_16MB.csv #ESP32-S3 N16, 16MB flash
 custom_config = config_obp40.json
 framework = arduino
 lib_deps =
@@ -102,7 +105,7 @@ build_flags=
     #-D LIPO_ACCU_1200               #Hardware extension, LiPo accu 3,7V 1200mAh
     #-D VOLTAGE_SENSOR               #Hardware extension, LiPo voltage sensor with two resistors
     ${env.build_flags}
-upload_port = /dev/ttyUSB0          #OBP40 download via external USB/Serail converter
+#upload_port = /dev/ttyUSB0          #OBP40 download via external USB/Serail converter
 upload_protocol = esptool           #firmware upload via USB OTG seriell, by first upload need to set the ESP32-S3 in the upload mode with shortcut GND to Pin27
 upload_speed = 230400
 monitor_speed = 115200
